changed CSS input

--- a/project_1.html/D3.css
+++ b/project_1.html/D3.css
@@ -1,4 +1,20 @@
+/* Applied to all <p> tags */
 p {
-  font-size: 12pt;
-  color:red;
+  color: blue;
 }
+
+/* Applied to all tags with the class "red" */
+.red {
+  background: red;
+}
+
+/* Applied to the tag with the id "some-id" */
+#some-id {
+  font-style: italic;
+}
+
+/* Applied only to <p> tags that are inside <li> tags */
+li p {
+  color: #0C0;
+}
+   
